--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
@@ -26,6 +27,7 @@
     "react-native-shadow-2": "^6.0.5",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
+    "react-redux": "^8.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
