--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
@@ -24,11 +28,15 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-shadow-2": "^6.0.5",
     "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-pager-view": "5.4.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
