--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-pager-view": "5.4.15",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-shadow-2": "^6.0.5",
-    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
     "yup": "^0.32.11",
-    "react-native-pager-view": "5.4.15"
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
