--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -32,17 +33,18 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-shadow-2": "^6.0.5",
+    "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
-    "yup": "^0.32.11",
-    "react-native-svg": "12.3.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "babel-plugin-inline-dotenv": "^1.7.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
